# AI-Agent-Framework

./: .coveragerc  .env.maestro.example  .flake8  .gitignore  .gitmodules  .issue-resolution-knowledge.json  .maestro-version  AGENT-REVIEW-COMPLETE.md  Analyze Autonomous Agent  CLEANUP-PLAN.md  CONTRIBUTING.md  COPILOT-REVIEW-COMPLETED.md  E2E_TESTING.md  ISSUEAGENT-CHAT-COMPLETE.md  ISSUEAGENT-CHAT-SETUP.md  Makefile  PLAN-AI-REPO-EXTRACTION.md  PLAN.md  PRMERGE-IMPLEMENTATION-SUMMARY.md  PROJECT-CONTEXT-SUMMARY.md  QUICKSTART.md  README.md  STEP-1-COMPLETION-PLAN.md  STEP-1-COMPLETION-SUMMARY.md  STEP-1-HYBRID-APPROACH-UPDATE.md  STEP-1-HYBRID-CHECKLIST.md  STEP-1-HYBRID-UPDATE-COMPLETE.md  STEP-1-IMPLEMENTATION-TRACKING.md  STEP-1-IMPLEMENTATION-WORKFLOW.md  STEP-1-ISSUES-PLAN-PROPOSAL.md  STEP-1-ISSUES-REVIEW.md  STEP-1-STATUS.md  STEP-2-PLANNING.md  SUMMARY.md  TEST-RESULTS.md  TESTING_SUMMARY.md  TODO-WISHLIST.md  continue-backend  continue-phase-2  continue-phase-3  (+20 more)
.github/: copilot-instructions.md  issue-closing-template.md  pull_request_template.md
.tmp/: README.md
agents/: README.md  agent_registry.py  autonomous_workflow_agent.py  base_agent.py  coder_agent.py  complexity_scorer.py  learning_scorer.py  llm_client.py  llm_rate_limiter.py  maestro.py  maestro_adapter.py  maestro_cli.py  mcp_client.py  planner_agent.py  ralph_agent.py  router_agent.py  tools.py  validation_profiles.py  workflow_agent.py  workflow_error_recovery.py  workflow_phase_helpers.py  workflow_phase_services.py  workflow_state.py
poc/cli/: agentctl.py  pyproject.toml  requirements.txt
(+790 files in other folders)
