[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentctl"
version = "0.1.0"
description = "CLI for the AI Agent Framework PoC hub"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.3",
    "httpx>=0.27.0",
    "rich>=13.7.1",
]

[project.scripts]
agentctl = "agentctl:app"

[tool.setuptools.packages.find]
where = ["."]
